# eos

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-dev  makefile
examples/: CMakeLists.txt  fit-model-multi-frame.cpp
include/eos/core/: BufferedVideoIterator.hpp  Landmark.hpp  LandmarkMapper.hpp  landmark_utils.hpp
include/eos/fitting/: FittingResult.hpp  ReconstructionData.hpp  blendshape_fitting.hpp  closest_edge_fitting.hpp  contour_correspondence.hpp  fitting.hpp  linear_shape_fitting.hpp  multiframe_linear.hpp  multiframe_linear_patrik.hpp
include/eos/morphablemodel/: MorphableModel.hpp
include/eos/render/: render.hpp  texture_extraction.hpp
include/eos/render/detail/: render_detail.hpp
include/eos/video/: BufferedVideoIterator.hpp  Keyframe.hpp
python/: generate-python-bindings.cpp
share/: default_reconstruction_config.ini
tests/: CMakeLists.txt  README.md  main_tests.cpp
tests/core/: landmark_test.hpp
tests/fitting/: fitting_test.cpp  fitting_test.hpp  linear_shape_fitting_test.hpp
tests/include/: test_helper.hpp
utils/: CMakeLists.txt  accuracy-evaluation-random.cpp  accuracy-evaluation.cpp  openmp-test.cpp
